--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rufina:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/grayscale.css" rel="stylesheet">
@@ -41,9 +43,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -52,13 +51,22 @@
   <!-- Header -->
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
+      <div class="balikonokfelul col-sm-1">
+				<div style="margin-bottom: 18vh; margin-top: 3vh; color: white;">
+					<a target="_blank" rel="noopener noreferrer" href="https://www.behance.net/anettszilvd687"><i class="fab fa-behance" style="font-size: 25; color: white;"></i></a>
+				</div>
+				<div style="margin-bottom: 18vh;">
+					<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/anett.szilvas/"><i class="fab fa-instagram" style="font-size: 30; color: white;"></i></a>
+				</div>
+				<div>
+					<a target="_blank" rel="noopener noreferrer" href=""><i class="fab fa-linkedin" style="font-size: 30; color: white;"></i></a>
+				</div>
+			</div>
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase" >Grayscale</h1>
-        <div class="mt-5">
+        <h2 class="mx-auto mt-3 text-uppercase" >The portolio of</h2>
+        <h1 class="mx-auto my-0 text-uppercase" >Anett <br> Szilvas</h1>
+        <div class="mt-3">
           <span class="text-white-50 mx-auto mt-2 mb-5" id="typed2"></span>
-        </div>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
-      </div>
     </div>
   </header>
 
