--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rufina:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -29,19 +28,19 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+    <div class="container nomargin">
+      <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div >
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
         </ul>
       </div>
@@ -50,8 +49,8 @@
 
   <!-- Header -->
   <header class="masthead">
-    <div class="container d-flex h-100 align-items-center">
-      <div class="balikonokfelul col-sm-1">
+    <div class="container d-flex h-100 align-items-center nomargin">
+      <div class="balikonokfelul">
 				<div style="margin-bottom: 18vh; margin-top: 3vh; color: white;">
 					<a target="_blank" rel="noopener noreferrer" href="https://www.behance.net/anettszilvd687"><i class="fab fa-behance" style="font-size: 25; color: white;"></i></a>
 				</div>
@@ -62,27 +61,15 @@
 					<a target="_blank" rel="noopener noreferrer" href=""><i class="fab fa-linkedin" style="font-size: 30; color: white;"></i></a>
 				</div>
 			</div>
-      <div class="mx-auto text-center">
+      <div class="mx-auto text-center fullwidth">
         <h2 class="mx-auto mt-3 text-uppercase" >The portolio of</h2>
-        <h1 class="mx-auto my-0 text-uppercase" >Anett <br> Szilvas</h1>
+        <h1 class="mx-auto my-0 text-uppercase" >Anett<br> Szilvas</h1>
         <div class="mt-3">
           <span class="text-white-50 mx-auto mt-2 mb-5" id="typed2"></span>
     </div>
   </header>
 
-  <!-- About Section -->
-  <section id="about" class="about-section text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-        </div>
-      </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
-    </div>
-  </section>
+
 
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
